# arkadiuszhalicki

python/: README.rst  pyproject.toml
python/src/: Dockerfile  manage.py
python/src/arkadiuszhalicki/: wsgi.py
python/src/arkadiuszhalicki/settings/: base.py  dev.py
python/src/arkadiuszhalicki/templates/: base.html
python/tests/: test_blog.py
