[tool.poetry]
name = "arkadiuszhalicki"
version = "0.1.0"
description = ""
authors = ["Arkadiusz Halicki <halicki.arkadiusz@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.3"
wagtail = "^2.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
